history of appointments for teacher

--- a/Login/login.html
+++ b/Login/login.html
@@ -55,7 +55,7 @@
                         if (data.userType === 'student') {
                             window.location.href = '/homepagestudent/homestudent';
                         } else if (data.userType === 'teacher') {
-                            window.location.href = '/homepageteacher/hometeacher';
+                            window.location.href = '/Teacher/home';
                         }
                     } else {
                         console.error('Lỗi không xác định');
