homepage for students

--- a/Login/login.html
+++ b/Login/login.html
@@ -53,7 +53,7 @@
                     } else if (data.success) {
                         // Xử lý đăng nhập thành công
                         if (data.userType === 'student') {
-                            window.location.href = '/homepagestudent/homestudent';
+                            window.location.href = '/Student/home';
                         } else if (data.userType === 'teacher') {
                             window.location.href = '/Teacher/home';
                         }
