manage projects and groups for teacher

--- a/Teacher/menu.html
+++ b/Teacher/menu.html
@@ -2,18 +2,20 @@
     <div class="function-list-TT">
         <a href="/Teacher/home" class="TT-link"><i class="bi bi-bookmark"></i>Trang chủ</a>
     </div>
-    <hr class="divider"> 
+    <hr class="divider">
     <div class="function-list-GV">
         <a href="" class="GV-link"><i class="bi bi-person-circle"></i>Giảng viên</a>
     </div>
-    <hr class="divider"> 
+    <hr class="divider">
     <ul class="function-list-item">
         <li class="item">
             <a href="" class="item-link"><i class="bi bi-layout-text-window-reverse"></i>Quản lý đồ án</a>
         </li>
-        
         <li class="item">
-            <a href="" class="item-link"><i class="bi bi-list-check"></i>Danh sách đề tài</a>
+            <a href="/Teacher/group" class="item-link"><i class="bi bi-list-check"></i>Danh sách nhóm sinh viên</a>
+        </li>
+        <li class="item">
+            <a href="/Teacher/project" class="item-link"><i class="bi bi-list-check"></i>Danh sách đề tài</a>
         </li>
         <li class="item">
             <a href="" class="item-link"><i class="bi bi-calendar3"></i>Quản lý lịch rảnh</a>
