--- a/Teacher/history.html
+++ b/Teacher/history.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý lịch hẹn</title>
-    <link rel="stylesheet" href="/Teacher/assets/history.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/Teacher/assets/history.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
     <div class="container">
-        <div id="menu-container"></div>
+        <div id="menu-container" class="function-list"></div>
         <div class="right-panel">
             <nav class="navigation">
                 <i class="bi bi-list"></i>
@@ -67,8 +65,7 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="appointmentDetailsModal" tabindex="-1" aria-labelledby="appointmentDetailsModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="appointmentDetailsModal" tabindex="-1" aria-labelledby="appointmentDetailsModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -93,5 +90,4 @@
     </script>
     <script src="/Teacher/history.js"></script>
 </body>
-
 </html>
