--- a/Teacher/menu.html
+++ b/Teacher/menu.html
@@ -2,24 +2,25 @@
     <div class="function-list-TT">
         <a href="/Teacher/home" class="TT-link"><i class="bi bi-bookmark"></i>Trang chủ</a>
     </div>
-    <hr class="divider"> 
+    <hr class="divider">
     <div class="function-list-GV">
         <a href="" class="GV-link"><i class="bi bi-person-circle"></i>Giảng viên</a>
     </div>
-    <hr class="divider"> 
+    <hr class="divider">
     <ul class="function-list-item">
         <li class="item">
             <a href="" class="item-link"><i class="bi bi-layout-text-window-reverse"></i>Quản lý đồ án</a>
         </li>
-        
         <li class="item">
-            <a href="" class="item-link"><i class="bi bi-list-check"></i>Danh sách đề tài</a>
+            <a href="/Teacher/listgroup.html" class="item-link"><i class="bi bi-list-check"></i>Danh sách nhóm đề tài</a>
         </li>
         <li class="item">
-            <a href="" class="item-link"><i class="bi bi-calendar3"></i>Quản lý lịch rảnh</a>
+            <a href="/Teacher/freecalender.html" class="item-link"><i class="bi bi-calendar3"></i>Quản lý lịch rảnh</a>
         </li>
         <li class="item">
             <a href="/Teacher/history" class="item-link"><i class="bi bi-clock-history"></i>Lịch sử cuộc hẹn</a>
         </li>
+        <li class="item">
+            <a href="/Teacher/liststudent.html" class="item-link"><i class="bi bi-list"></i>Danh sách sinh viên</a>
     </ul>
 </div>
