--- a/Teacher/menu.html
+++ b/Teacher/menu.html
@@ -9,11 +9,10 @@
     <hr class="divider">
     <ul class="function-list-item">
         <li class="item">
-            <a href="" class="item-link"><i class="bi bi-layout-text-window-reverse"></i>Quản lý đồ án</a>
+            <a href="/Teacher/group.html" class="item-link"><i class="bi bi-layout-text-window-reverse"></i>Quản lý nhóm sinh viên</a>
         </li>
-        
         <li class="item">
-            <a href="" class="item-link"><i class="bi bi-list-check"></i>Danh sách đề tài</a>
+            <a href="/Teacher/project.html" class="item-link"><i class="bi bi-list-check"></i>Danh sách đề tài</a>
         </li>
         <li class="item">
             <a href="/Teacher/freecalender.html" class="item-link"><i class="bi bi-calendar3"></i>Quản lý lịch rảnh</a>
