manage groups for students

--- a/Student/menu.html
+++ b/Student/menu.html
@@ -13,7 +13,7 @@
         </li>
         
         <li class="item">
-            <a href="" class="item-link"><i class="bi bi-list-check"></i>Danh sách nhóm đề tài</a>
+            <a href="/Student/group.html" class="item-link"><i class="bi bi-list-check"></i>Danh sách nhóm đề tài</a>
         </li>
     </ul>
 </div>
