--- a/Student/menu.html
+++ b/Student/menu.html
@@ -4,7 +4,7 @@
     </div>
     <hr class="divider"> 
     <div class="function-list-SV">
-        <a href="" class="SV-link"><i class="bi bi-person-circle"></i>Sinh viên</a>
+        <a href="/Student/info.html" class="SV-link"><i class="bi bi-person-circle"></i>Sinh viên</a>
     </div>
     <hr class="divider"> 
     <ul class="function-list-item">
