--- a/Teacher/menu.html
+++ b/Teacher/menu.html
@@ -4,23 +4,23 @@
     </div>
     <hr class="divider">
     <div class="function-list-GV">
-        <a href="" class="GV-link"><i class="bi bi-person-circle"></i>Giảng viên</a>
+        <a href="/Teacher/info" class="GV-link"><i class="bi bi-person-circle"></i>Giảng viên</a>
     </div>
     <hr class="divider">
     <ul class="function-list-item">
         <li class="item">
-            <a href="/Teacher/group.html" class="item-link"><i class="bi bi-layout-text-window-reverse"></i>Quản lý nhóm sinh viên</a>
+            <a href="/Teacher/group" class="item-link"><i class="bi bi-layout-text-window-reverse"></i>Quản lý nhóm sinh viên</a>
         </li>
         <li class="item">
-            <a href="/Teacher/project.html" class="item-link"><i class="bi bi-list-check"></i>Danh sách đề tài</a>
+            <a href="/Teacher/project" class="item-link"><i class="bi bi-list-check"></i>Danh sách đề tài</a>
         </li>
         <li class="item">
-            <a href="/Teacher/freecalender.html" class="item-link"><i class="bi bi-calendar3"></i>Quản lý lịch rảnh</a>
+            <a href="/Teacher/free-time" class="item-link"><i class="bi bi-calendar3"></i>Quản lý lịch rảnh</a>
         </li>
         <li class="item">
             <a href="/Teacher/history" class="item-link"><i class="bi bi-clock-history"></i>Lịch sử cuộc hẹn</a>
         </li>
         <li class="item">
-            <a href="/Teacher/liststudent.html" class="item-link"><i class="bi bi-list"></i>Danh sách sinh viên</a>
+            <a href="/Teacher/list-student" class="item-link"><i class="bi bi-list"></i>Danh sách sinh viên</a>
     </ul>
 </div>
