--- a/Teacher/liststudent.html
+++ b/Teacher/liststudent.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danh sách sinh viên</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.2/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="assets/liststudent.css">
+    <link rel="stylesheet" href="/Teacher/assets/liststudent.css">
+    <link rel="stylesheet" href="/Teacher/assets/menu.css">
     <style>
         /* Modal styles */
         .modal {
@@ -127,7 +128,7 @@
                 <table id="studentTable">
                     <thead>
                         <tr>
-                            <th>ID</th>
+                            <th>STT</th>
                             <th>Họ tên</th>
                             <th>MSSV</th>
                             <th>Lớp</th>
@@ -168,6 +169,6 @@
     </div>
 </div>
 
-    <script src="liststudent.js"></script>
+    <script src="/Teacher/liststudent.js"></script>
 </body>
 </html>
