--- a/Teacher/freecalendar.html
+++ b/Teacher/freecalendar.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Quản lý lịch rảnh</title>
-    <link rel="stylesheet" href="assets/freecalender.css">
+    <link rel="stylesheet" href="/Teacher/assets/freecalendar.css">
+    <link rel="stylesheet" href="/Teacher/assets/menu.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -75,6 +76,6 @@
             })
             .catch(error => console.error('Error fetching menu:', error));
     </script>
-    <script src="freecalender.js"></script>
+    <script src="/Teacher/freecalendar.js"></script>
 </body>
 </html>
